# filament

./: .gitignore  .ocamlformat  dune-project  filament.opam
lib/: book.ml  book.mli  common.ml  dune  event_sourced.ml
lib/common/: common.ml
lib/domain/: book.ml  book.mli  bookshelf.ml  bookshelf.mli
test/: dune  test_setup.ml
test/common/: common.ml  dune  test_common.ml
test/domain/: book.ml  test_book.ml  test_bookshelf.ml
